--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
 job_deploy_otrs_Znuny4OTRSAutoSelect:
   stage: deploy
   script:
+    - pwd
     - git checkout $CI_BUILD_REF_NAME
     - git pull --rebase origin $CI_BUILD_REF_NAME
     - git filter-branch --force --index-filter "git rm --cached --ignore-unmatch './.gitlab-ci.yml'" --prune-empty --tag-name-filter cat -- $CI_BUILD_REF_NAME
