--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,4 @@ job_deploy_otrs_Znuny4OTRSAutoSelect:
   stage: deploy
   script:
     - pwd
-    - git checkout $CI_BUILD_REF_NAME
-    - git pull --rebase origin $CI_BUILD_REF_NAME
-    - git filter-branch --force --index-filter "git rm --cached --ignore-unmatch './.gitlab-ci.yml'" --prune-empty --tag-name-filter cat -- $CI_BUILD_REF_NAME
-    - if git remote | grep github > /dev/null; then git remote rm github; fi
-    - git remote add github git@github.com:znuny/Znuny4OTRS-AutoSelect.git
-    - git push github $CI_BUILD_REF_NAME
+    - sh /sync_repo.sh git@github.com:znuny/Znuny4OTRS-AutoSelect.git
