Ported to OTRS 6.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,29 @@
-image: otrs5ci
+image: registry.znuny.com/znuny/docker-otrs6ci:latest
+
+services:
+  - mysql:latest
+
+variables:
+  MYSQL_DATABASE: otrs
+  MYSQL_ROOT_PASSWORD: znuny4otrs
 
 stages:
+  - test
   - deploy
 
+job_unit_otrs_Znuny4OTRSRepo:
+  stage: test
+  variables:
+    SELENIUM_SCREENSHOTS: 'true'
+  artifacts:
+    expire_in: 1 week
+    when: on_failure
+    untracked: true
+  script:
+    - env
+    - pwd
+    - /run.sh
+    - su -c "perl /opt/otrs/bin/otrs.Console.pl Dev::UnitTest::Run --verbose --test Selenium/Agent/Znuny4OTRSAutoSelect" -s /bin/bash otrs
 job_deploy_otrs_Znuny4OTRSAutoSelect:
   stage: deploy
   script:
