--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ job_unit_otrs_Znuny4OTRSRepo:
     - env
     - pwd
     - /run.sh
+    - su -c "perl /opt/otrs/bin/otrs.Console.pl Znuny4OTRS::AdvancedPackageManager::InstallSOPM /opt/otrs/Znuny4OTRS-AutoSelect.sopm" -s /bin/bash otrs
     - su -c "perl /opt/otrs/bin/otrs.Console.pl Dev::UnitTest::Run --verbose --test Selenium/Agent/Znuny4OTRSAutoSelect" -s /bin/bash otrs
 job_deploy_otrs_Znuny4OTRSAutoSelect:
   stage: deploy
