--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,6 @@
-image: registry.znuny.com/znuny/docker-otrs5ci:latest
+image: registry.znuny.com/znuny/internal/docker-otrs5ci:$OTRS_TAG
 
-services:
-  - name: registry.znuny.com/znuny/docker-mysql-utf8:latest
-    alias: mysql
-
-stages:
-  - deploy
-
-job_deploy_otrs_Znuny4OTRSAutoSelect:
+deploy:
   stage: deploy
   script:
     - pwd
